tests/NormalTests/paczka1/fuzzy1/78325423.err
Error in line 4: xA1NERS7645,1
Error in line 1: Isbg S76 88,6
Error in line 8: xA1NER S991 52,2
Error in line 15: Isbg S991 80,5
Error in line 18: xA1NER S76 88,4
Error in line 14: l2zlihY S991 83,7
